tests/regression/error/hw4_error04.correct
operator '-' requires number * number, found none * none
